@@ -1,17 +1,17 @@
 package unpsjb.labprog.backend.business.service;
 
-import java.util.List;
-import java.util.Optional;
-
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
 import unpsjb.labprog.backend.business.repository.TurnoRepository;
 import unpsjb.labprog.backend.dto.TurnoDTO;
 import unpsjb.labprog.backend.model.Turno;
+
+import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class TurnoService {
@@ -19,12 +19,14 @@ public class TurnoService {
     @Autowired
     private TurnoRepository repository;
 
+    // Obtener todos los turnos como DTOs
     public List<TurnoDTO> findAll() {
         return repository.findAll().stream()
                 .map(this::toDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
+    // Obtener un turno por ID como DTO
     public Optional<TurnoDTO> findById(Long id) {
         return repository.findById(id).map(this::toDTO);
     }
@@ -32,40 +34,32 @@ public class TurnoService {
     @Transactional
     public TurnoDTO save(TurnoDTO dto) {
         Turno turno = toEntity(dto);
-
-        // Validaciones
-        if (turno.getId() == null || turno.getId() == 0) {
-            if (repository.existsByFechaAndHoraInicioAndCentroAtencion(
-                    turno.getFecha(), turno.getHoraInicio(), turno.getCentroAtencion())) {
-                throw new IllegalStateException("Ya existe un turno registrado en esta fecha y hora para este centro de atención");
-            }
-        } else {
-            Turno existente = repository.findById(turno.getId()).orElse(null);
-            if (existente == null) {
-                throw new IllegalStateException("No existe el turno que se intenta modificar");
-            }
-        }
-
-        return toDTO(repository.save(turno));
+        Turno saved = repository.save(turno);
+        return toDTO(saved);
     }
 
-    public void delete(Long id) {
-        repository.deleteById(id);
-    }
-
+    // Obtener turnos paginados como DTOs
     public Page<TurnoDTO> findByPage(int page, int size) {
         return repository.findAll(PageRequest.of(page, size))
                 .map(this::toDTO);
     }
 
+    @Transactional
+    public void delete(Long id) {
+        if (!repository.existsById(id)) {
+            throw new IllegalStateException("No existe un turno con el ID: " + id);
+        }
+        repository.deleteById(id);
+    }
+
+    // Métodos de conversión entre entidad y DTO
     private TurnoDTO toDTO(Turno turno) {
         TurnoDTO dto = new TurnoDTO();
         dto.setId(turno.getId());
         dto.setFecha(turno.getFecha());
-        dto.setHoraInicio(turno.getHoraInicio());
-        dto.setHoraFin(turno.getHoraFin());
-        dto.setEstado(turno.getEstado().name());
-        // Mapear relaciones (EsquemaTurno, Paciente, etc.)
+        dto.setHora(turno.getHora());
+        dto.setPacienteId(turno.getPaciente().getId());
+        dto.setMedicoId(turno.getMedico().getId());
         return dto;
     }
 
@@ -73,9 +67,8 @@ public class TurnoService {
         Turno turno = new Turno();
         turno.setId(dto.getId());
         turno.setFecha(dto.getFecha());
-        turno.setHoraInicio(dto.getHoraInicio());
-        turno.setHoraFin(dto.getHoraFin());
-        // Mapear relaciones (EsquemaTurno, Paciente, etc.)
+        turno.setHora(dto.getHora());
+        // Aquí debes cargar las entidades relacionadas (Paciente y Medico) si es necesario
         return turno;
     }
 }
